fix: H2 db using key-word user feat: adding H2 Db for testing